--- a/index.html
+++ b/index.html
@@ -696,11 +696,11 @@ html,body{touch-action:manipulation;}
   </div>
 
   <nav class="bnav">
-    <button class="ntab on" id="nt-home"       onclick="showScreen('home')"><div class="ni">🏠</div></div>
-    <button class="ntab"    id="nt-highlights" onclick="showScreen('highlights')"><div class="ni">✨</div></div>
-    <button class="ntab"    id="nt-post"       onclick="showScreen('post')"><div class="ni" style="width:46px;height:32px;border-radius:10px;background:linear-gradient(135deg,#F472B6,#A855F7,#6366F1);display:flex;align-items:center;justify-content:center;color:#fff;font-size:20px;box-shadow:0 3px 12px rgba(168,85,247,.42)">＋</div></div>
-    <button class="ntab"    id="nt-photos"     onclick="showScreen('photos')"><div class="ni">🖼️</div></div>
-    <button class="ntab"    id="nt-health"     onclick="showScreen('health')"><div class="ni">🏥</div></button>
+    <button class="ntab on" id="nt-home"       onclick="showScreen('home')"><div class="ni">🏠</div></button>
+    <button class="ntab"    id="nt-highlights" onclick="showScreen('highlights')"><div class="ni">✨</div></button>
+    <button class="ntab"    id="nt-post"       onclick="showScreen('post')"><div class="ni" style="width:46px;height:32px;border-radius:10px;background:linear-gradient(135deg,#F472B6,#A855F7,#6366F1);display:flex;align-items:center;justify-content:center;color:#fff;font-size:20px;box-shadow:0 3px 12px rgba(168,85,247,.42)">＋</div></button>
+    <button class="ntab"    id="nt-photos"     onclick="showScreen('photos')"><div class="ni">📷</div></button>
+    <button class="ntab"    id="nt-health"     onclick="showScreen('health')"><div class="ni">❤️</div></button>
   </nav>
 </div>
 
