--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ body{font-family:var(--ff);background:var(--bg);color:var(--tx);-webkit-font-smo
 .sp-dot:nth-child(2){animation-delay:.2s;}.sp-dot:nth-child(3){animation-delay:.4s;}
 
 /* ── SHELL ── */
-#app{display:none;height:100%;flex-direction:column;}
+#app{display:none;height:100%;flex-direction:column;padding-top:52px;}
 .screens{flex:1;position:relative;overflow:hidden;}
-.screen{position:absolute;inset:0;display:none;flex-direction:column;overflow-y:auto;background:var(--bg);}
+.screen{position:absolute;inset:0;display:none;flex-direction:column;overflow-y:auto;background:var(--bg);z-index:1;padding-bottom:calc(56px + env(safe-area-inset-bottom,0));}
 .screen::-webkit-scrollbar{display:none;}
 .screen.active{display:flex;animation:riseIn .2s ease;}
 
@@ -64,6 +64,7 @@ body{font-family:var(--ff);background:var(--bg);color:var(--tx);-webkit-font-smo
   padding:0 16px;height:52px;
   display:flex;align-items:center;gap:12px;
   flex-shrink:0;z-index:60;
+  position:fixed;top:0;left:0;right:0;
 }
 .tb-ava{width:32px;height:32px;border-radius:50%;background:var(--sf2);display:flex;align-items:center;justify-content:center;cursor:pointer;overflow:hidden;font-size:17px;flex-shrink:0;}
 .tb-name{font-family:var(--fh);font-size:17px;color:var(--tx);flex:1;font-weight:700;letter-spacing:.01em;}
@@ -358,6 +359,7 @@ canvas#weightChart{width:100%;height:110px;}
   border-top:1px solid rgba(0,0,0,.06);
   display:flex;align-items:center;flex-shrink:0;
   height:56px;padding-bottom:env(safe-area-inset-bottom,0);
+  position:fixed;bottom:0;left:0;right:0;z-index:100;
 }
 .ntab{flex:1;display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;height:100%;position:relative;min-width:0;border:none;background:transparent;padding:0;-webkit-appearance:none;appearance:none;}
 .ntab:active{opacity:.5;}
@@ -1581,6 +1583,27 @@ initDates();
 renderDiaryList();
 window.addEventListener('load',()=>{setTimeout(()=>{document.getElementById('splash').classList.add('out');document.getElementById('app').style.display='flex';},1400);});
 window.addEventListener('resize',drawChart);
+
+// スワイプで戻る
+(function(){
+  const history=[];
+  const _orig=window.showScreen;
+  window.showScreen=function(id){
+    const cur=document.querySelector('.screen.active');
+    if(cur && cur.id!==id+'Screen') history.push(cur.id.replace('Screen',''));
+    if(_orig) _orig(id);
+  };
+  let sx=0,sy=0;
+  document.addEventListener('touchstart',e=>{sx=e.touches[0].clientX;sy=e.touches[0].clientY;},{passive:true});
+  document.addEventListener('touchend',e=>{
+    const dx=e.changedTouches[0].clientX-sx;
+    const dy=Math.abs(e.changedTouches[0].clientY-sy);
+    if(dx>60&&dy<40&&history.length){
+      window.showScreen(history.pop());
+    }
+  },{passive:true});
+})();
+
 </script>
 </body>
 </html>
